--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -48,6 +48,7 @@ a {
   text-align: center;
   border: solid 1px #E85C05;
   transition: 0.25s ease-in-out;
+  font-size: 16px;
 }
 .btn:hover {
   background-color: #ffffff;
@@ -66,8 +67,11 @@ header {
   padding: 20px;
 }
 header .avatar {
-  width: 30px;
-  height: 30px;
+  width: 50px;
+  height: 50px;
+  object-fit: cover;
+  border-radius: 50%;
+  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
 }
 
 ::-webkit-scrollbar {
@@ -186,7 +190,7 @@ ul.trips-list li img {
 }
 
 .trip__image-container {
-  position: absolute;
+  position: fixed;
   max-width: 425px;
   background-size: cover;
   background-position: top;
@@ -201,11 +205,12 @@ ul.trips-list li img {
   border-top-left-radius: 40px;
   z-index: 2;
   background: #ffffff;
-  margin: 300px 20px 0px 20px;
+  margin: 200px 20px 0px 20px;
 }
 .trip__details-container .title-container {
   display: flex;
   justify-content: space-between;
+  margin-bottom: 50px;
 }
 .trip__details-container .title-container p {
   margin: 0;
@@ -222,12 +227,16 @@ ul.trips-list li img {
 .trip__details-container .title-container .per-person {
   text-align: right;
 }
+.trip__details-container .inner-container section {
+  margin-bottom: 50px;
+}
 
 .book-trip__image-container {
   height: 100px;
 }
 .book-trip__details-container {
   margin-top: 100px;
+  margin-bottom: 100px;
 }
 .book-trip form.booking-form .select-box {
   display: inline-block;
@@ -250,6 +259,13 @@ ul.trips-list li img {
 .book-trip form.booking-form .selected {
   background-color: #1B2739;
   color: #ffffff;
+}
+.book-btn-container {
+  display: flex;
+  justify-content: space-between;
+}
+.book-btn-container .spacer {
+  width: 100px;
 }
 
 .book-btn {
