--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -162,7 +162,7 @@ ul.trips-list li {
   background-size: cover;
   background-position: center;
   position: relative;
-  width: 300px;
+  width: 200px;
   min-height: 400px;
 }
 ul.trips-list li a {
@@ -240,25 +240,42 @@ ul.trips-list li img {
 }
 .book-trip form.booking-form .select-box {
   display: inline-block;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  margin: 0px 0px 15px 0px;
-  padding: 20px;
-  background-color: #ffffff;
+  margin: 0 5px 0 0;
+  width: 100%;
+  position: relative;
+  padding: 30px 0px;
+  border: solid 0.5px;
   box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.1);
-  transition: background-color 0.3s, box-shadow 0.3s;
 }
-.book-trip form.booking-form .select-box:hover {
-  background-color: #1B2739;
-  color: #ffffff;
-  box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.3);
+.book-trip form.booking-form .select-box label, .book-trip form.booking-form .select-box input {
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
 }
 .book-trip form.booking-form .select-box input[type=radio] {
-  display: none;
+  opacity: 0.011;
+  z-index: 100;
 }
-.book-trip form.booking-form .selected {
+.book-trip form.booking-form .select-box input[type=radio]:checked + label {
   background-color: #1B2739;
   color: #ffffff;
+  border-radius: 4px;
+}
+.book-trip form.booking-form .select-box label {
+  cursor: pointer;
+  z-index: 90;
+  line-height: 1.8em;
+  padding: 15px 25px;
+}
+.book-trip form.booking-form .personal-info input {
+  border: none;
+  font-size: 20px;
+  width: 100%;
+  padding: 10px 0px;
+  color: #909090;
 }
 .book-btn-container {
   display: flex;
@@ -270,7 +287,6 @@ ul.trips-list li img {
 
 .book-btn {
   padding: 10px 50px;
-  max-width: 100px;
 }
 
 .slide-in-left {
