--- a/scss/index.scss
+++ b/scss/index.scss
@@ -118,7 +118,7 @@ ul.trips-list{
         background-size: cover;
         background-position: center;
         position: relative;
-        width: 300px;
+        width: 200px;
         min-height: 400px;
         a{
             position: absolute;
@@ -205,25 +205,44 @@ ul.trips-list{
     form.booking-form{
         .select-box{
             display: inline-block;
-            border: 1px solid #ccc;
-            border-radius: 4px;
-            margin: 0px 0px 15px 0px;
-            padding: 20px;
-            background-color: #ffffff;
+            margin: 0 5px 0 0;
+            width: 100%;
+            position: relative;
+            padding: 30px 0px;
+            border: solid 0.5px;
             box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.1);
-            transition: background-color 0.3s, box-shadow 0.3s;
-            &:hover{
+            label, input{
+                display: block;
+                position: absolute;
+                top: 0;
+                left: 0;
+                right: 0;
+                bottom: 0;
+            }
+            input[type="radio"] {
+                opacity: 0.011;
+                z-index: 100;
+            }
+            input[type="radio"]:checked + label {
                 background-color: $color-blue;
                 color: $color-white;
-                box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.3);
+                border-radius: 4px;
             }
-            input[type="radio"]{
-                display: none;
+            label {
+                cursor: pointer;
+                z-index: 90;
+                line-height: 1.8em;
+                padding: 15px 25px;
             }
         }
-        .selected{
-            background-color: $color-blue;
-            color: $color-white;
+        .personal-info{
+            input{
+                border: none;
+                font-size: 20px;
+                width: 100%;
+                padding: 10px 0px;
+                color: $color-grey;
+            }
         }
         .book-btn{
             
@@ -239,7 +258,6 @@ ul.trips-list{
 }
 .book-btn{
     padding: 10px 50px;
-    max-width: 100px;
 }
 
 // Intersection observer animations
