--- a/scss/vars/colors.scss
+++ b/scss/vars/colors.scss
@@ -1,5 +1,6 @@
 $color-white: #ffffff;
 $color-black: #000000;
+$color-grey: #909090;
 $color-blue: #1B2739;
 $color-blue--lighter: #4CA6FE;
 $color-orange: #E85C05;
