--- a/views/book.ejs
+++ b/views/book.ejs
@@ -44,7 +44,7 @@
         <section>
           <h4>room type</h4>
           <% for (let room of trip.rooms) { %>
-          <div class="select-box">
+          <div class="select-box select-box-room">
             <input
               type="radio"
               id="room"
