--- a/scss/layout/typography.scss
+++ b/scss/layout/typography.scss
@@ -54,5 +54,11 @@ a{
     &--secondary{
         background-color: $color-blue--lighter;
         border-color: $color-blue--lighter;
+        font-size: 12px;
+    }
+    &--danger{
+        background-color: $color-red;
+        border-color: $color-red;
+        font-size: 12px;
     }
 }
