--- a/scss/index.scss
+++ b/scss/index.scss
@@ -268,6 +268,10 @@ ul.trips-list{
         font-size: 30px;
         margin-bottom: 50px;
     }
+    .buttons-container{
+        display: flex;
+        justify-content: space-between;
+    }
 }
 
 // Intersection observer animations
