--- a/views/confirmed.ejs
+++ b/views/confirmed.ejs
@@ -20,12 +20,20 @@
       <img />
     </section>
     <% } %>
-    <form
-      action="/trips/<%= trip.slug %>/book/confirmed/<%= booking._id %>/delete"
-      method="POST"
-    >
-      <button type="submit">Delete Booking</button>
-    </form>
-    <a href="/" class="btn btn--secondary">back to Home</a>
+    <div class="buttons-container">
+      <form
+        action="/trips/<%= trip.slug %>/book/confirmed/<%= booking._id %>/delete"
+        method="POST"
+      >
+        <button
+          class="btn btn--danger"
+          onclick="return confirm('Are you sure you want to delete this booking?');"
+          type="submit"
+        >
+          Delete Booking
+        </button>
+      </form>
+      <a href="/" class="btn btn--secondary">back to Home</a>
+    </div>
   </div>
 </div>
