--- a/views/trips.ejs
+++ b/views/trips.ejs
@@ -5,20 +5,24 @@
   </section>
   <div class="trips__container">
     <ul class="trips-list">
-      <% for (let trip of trips) { %> <% if (trip.images[0]) { %>
+      <% for (let trip of trips) { %>
       <li class="trip-item">
         <a href="/trips/<%= trip.slug %>">
           <div class="trip-image-container">
-            <img src="<%= trip.images[0] %>" />
+            <% for (let image of trip.images) { %>
+            <img
+              class="trip-image"
+              src="<%= image.url %>"
+              alt="<%= image.alt %>"
+            />
+            <% } %>
           </div>
           <div class="trip-title-container">
             <h3 class="title"><%= trip.destination %></h3>
           </div>
         </a>
       </li>
-      <% } else { %>
-      <span>No image available</span>
-      <% } %> <% } %>
+      <% } %>
     </ul>
   </div>
 </div>
