--- a/public/styles/index.css
+++ b/public/styles/index.css
@@ -70,6 +70,20 @@ body {
   margin: 0;
 }
 
+main {
+  display: none;
+}
+
+.loading {
+  position: absolute;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  top: 0;
+  height: 100vh;
+}
+
 header {
   display: flex;
   justify-content: space-between;
@@ -197,6 +211,9 @@ ul.trips-list li img {
   border-radius: 15px;
   border-top-right-radius: 190px;
   box-shadow: 2px 4px 4px rgba(0, 0, 0, 0.25);
+}
+ul.trips-list li.active {
+  transform: scale(1.03) !important;
 }
 
 .trip__image-container {
