--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -7,8 +7,10 @@
     <title>Explora - <%- title %></title>
     <link rel="stylesheet" href="/styles/index.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/gsap.min.js"></script>
+    <script src="https://unpkg.com/@lottiefiles/lottie-player@latest/dist/lottie-player.js"></script>
   </head>
   <body>
+    <%- include ('../partials/loading.ejs') %>
     <main><%- body %></main>
     <%- include('../partials/footer.ejs') %>
     <script src="/js/script.js"></script>
