--- a/views/trip_details.ejs
+++ b/views/trip_details.ejs
@@ -2,7 +2,7 @@
   <% if (trip) { %>
   <div
     class="trip__image-container"
-    style="background-image: url('<%= trip.images[0] %>')"
+    style="background-image: url('<%= trip.images[2].url %>')"
   ></div>
   <div class="trip__details-container slide-in-top">
     <div class="title-container slide-in-top">
