--- a/views/book.ejs
+++ b/views/book.ejs
@@ -2,7 +2,7 @@
   <% if (trip) { %>
   <div
     class="trip__image-container book-trip__image-container"
-    style="background-image: url('<%= trip.images[0] %>')"
+    style="background-image: url('<%= trip.images[3].url %>')"
   ></div>
   <div
     class="trip__details-container book-trip__details-container slide-in-top"
