--- a/views/confirmed.ejs
+++ b/views/confirmed.ejs
@@ -1,7 +1,7 @@
 <div class="trip confirmed container">
   <div
     class="trip__image-container book-trip__image-container"
-    style="background-image: url('/images/<%= trip.image %>')"
+    style="background-image: url('<%= trip.images[3].url %>')"
   ></div>
   <div class="trip__details-container book-trip__details-container">
     <div class="title-container">
